address vector performance issues, ass test coverage (#5)